2025-08-16 AIDA Shinra <shinra@j10n.org>
	* [Merged] from the SFJP trunk on 2005-01-04:
	* doc/lisp/canlisp.tex: style fix
	* [Merged] from the SFJP trunk on 2005-01-01:
	* New canlisp feature: (load "nonexistent-file" t) returns no error.
	* lib/canna/lisp.c(Lload): If a non-nil value is given as the second
	  arg of "load", no error is raised even if a nonexistent file were
	  loaded. If the second arg is omitted, nil is assumed.
	* doc/lisp/canlisp.tex: describe the feature

2025-08-16 AIDA Shinra <shinra@j10n.org>
	* [Merged] from the SFJP trunk on 2007-08-08:
	* [Canna-dev 360]: romaji-yuusen bug
	* Multiple bugfixes around kana input
	* lib/canna/RKkana.c(RkwMapPhonogram): Don't pass non-ASCII characters
	  to RkMapPhonogram as the 6th arg.
	* lib/canna/RKroma.c (RkMapPhonogram): Handle sokuon in old dic case
	  as romaji-yuusen feature expects.
	  (RkMapRoma): Tweak for consistency with RkMapPhonogram's change.
	* lib/canna/empty.c(EmptySelfInsert): Prevent crash in kana input.
	* lib/canna/multi.c(_DoFuncSequence): Convert kana key to wchar.
	* lib/canna/romaji.c(YomiInsert): Allow only ASCII and kana keys to be
	  FunctionalInsert'ed.
	  (makePhonoOnBuffer): Change the 3rd arg to wchar_t.
	  (Yomisearchfunc): Try romaji-yuusen feature only for suitable keys
	  for romaji-kana conversion.

2025-08-16 AIDA Shinra <shinra@j10n.org>
	* [Merged] from the SFJP trunk on 2004-09-30:
	* [Canna-dev 320]: multi.c patch
	* lib/canna/multi.c: End, Zenkaku/Hankaku key

2025-08-16 AIDA Shinra <shinra@j10n.org>
	* [Merged] from the SFJP trunk on 2004-04-10:
	* [Canna-dev 297]: romaji-yuusen & canna-do-function
	* lib/canna/romaji.c(Yomisearchfunc): override keymap only when no
	  function is specified (i.e. not KC_DO, multisequence, ...)

2025-08-15 AIDA Shinra <shinra@j10n.org>
	* [Merged] from STABLE-3.7 branch:
	* CHANGES.jp: updated for 3.7p5
	* Canna.conf.dist: static libraries were not built. fixed.
	* configure.ac: bump to 3.7p5
	* canna/patchlevel.h: ditto